@@ -1,6 +1,10 @@
 # ChangeLog for Gentoo System Intialization ("rc") scripts
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2
 
+  19 Sep 2006; Roy Marples <uberlord@gentoo.org>:
+
+    Start scheduled services in the correct order, #148011.
+
   14 Sep 2006; Roy Marples <uberlord@gentoo.org>:
 
     RC_ERASE_SWAP has been removed. If you're that paranoid about the swap
